--- a/app/views/exhibitions/video.html.erb
+++ b/app/views/exhibitions/video.html.erb
@@ -44,30 +44,35 @@
     </ul>
   </div>
 </div>
+
 <div class="container">
-  <div class="row" style="margin-top:10px;">
-    <div class="row">
-      <div class="col-12 col-sm-6 col-md-5 col-lg-5">
-        <br>
-        <p class="exhibition_artistname exhibition_work_block_data_line_height"><%= @exhibition.artist %></p><br>
-        <span class="exhibition_title work_block_data_line_height">
-          <%= @exhibition.name %> </span><br>
-        <span class="date work_block_data_line_height">
-          <%= @exhibition.start_date %> to <%= @exhibition.end_date %> </span><br>
-        <span class="date work_block_data_line_height">
-          <%= @exhibition.galery.location %> </span> <br>
-        <br>
-        <br>
-        <%= link_to  "Want to buy ?", exhibition_art_pieces_path(@exhibition) , :class => "expoDetailMenu text-light bg-dark nounderline", :title => "Selected works" %><br>
-        <%= link_to  "Press release", "#" , :class => "expoDetailMenu  active text-light bg-dark nounderline", :title => "Press release" %><br>
-        <%= link_to  "Video", video_path(@exhibition) , :class => "expoDetailMenu  active text-light bg-dark nounderline", :title => "Video" %><br>
-        <br>
-        <br>
-        <p>We invite you to experience our new online "<%= link_to "Show room", "#", class: "btn btn-light btn-sm"%>" for an immersive visit of this exhibition.</p>
-      </div>
-      <div class="col-12 col-sm-12 col-md-7 col-lg-7">
-        <iframe style="margin-left:75px; margin-top:30px;" width="560" height="315" src=<%=@exhibition.video %> frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> <br>
-        <br>
+  <div class="card-title text-center p-2 mb-1" style="margin-top:20px">
+    <h4> Galery <%= @exhibition.galery.name %></h4>
+  </div>
+  <div class="card" style="margin-top:20px;">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-5 col-lg-5">
+          <br>
+          <p class="exhibition_artistname exhibition_work_block_data_line_height"><%= @exhibition.artist %></p><br>
+          <span class="exhibition_title work_block_data_line_height">
+            <%= @exhibition.name %> </span><br>
+          <span class="date work_block_data_line_height">
+            <%= @exhibition.start_date %> to <%= @exhibition.end_date %> </span><br>
+          <span class="date work_block_data_line_height">
+            <%= @exhibition.galery.location %> </span> <br>
+          <br>
+          <%= link_to  "Selected Works", exhibition_art_pieces_path(@exhibition) , :class => "expoDetailMenu text-light bg-dark nounderline", :title => "Selected works" %><br>
+          <%= link_to  "Press release", "#" , :class => "expoDetailMenu  active text-light bg-dark nounderline", :title => "Press release" %><br>
+          <br>
+          <p>We invite you to experience our new "<%= link_to "Show room", "#", class: "expoDetailMenu  active text-light bg-dark nounderline"%>" for an immersive visit of this exhibition.</p>
+        </div>
+        <div class="col-12 col-sm-12 col-md-7 col-lg-7">
+          <div class="container" style="padding: 30px 20px 20px 50px">
+            <iframe width="560" height="315" src=<%=@exhibition.video %> frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> <br>
+            <br>
+          </div>
+        </div>
       </div>
     </div>
   </div>
