--- a/app/views/showrooms/edit.html.erb
+++ b/app/views/showrooms/edit.html.erb
@@ -1,9 +1,9 @@
-<% content_for :meta_title, "#{@showroom.exhibition.galery.name} | #{@showroom.name}" %>
+<% content_for :meta_title, "Edit Showroom" %>
 <div class="navbar nav navbar-expand-sm navbar-light navbar-lewagon">
   <div class="nav-item">
     <ul class="navbar-nav ml-auto">
       <li><%= link_to "Home", root_path, class: "nav-link", style: "text-decoration: none; color: gray;"   %></li>
-      <li> <%= link_to "Back", galery_path(@showroom.exhibition.galery) , :class => "nav-link", style: "text-decoration: none; color: gray;"%></li>
+      <li> <%= link_to "Back", exhibition_path(@showroom) , :class => "nav-link", style: "text-decoration: none; color: gray;"%></li>
     </ul>
   </div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,16 +25,13 @@
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <% current_user.exhibitions.each do |exhibition| %>
           <%= link_to exhibition.name, exhibition, class: "dropdown-item" %>
-          <%end%>
+          <% end %>
         </div>
       </li>
       <li class="nav-item dropdown">
         <span class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" data-toggle="aria-haspopup" data-aria-expanded='false'> Menu </span>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <% if current_user.eql?(@showroom.exhibition.user) %>
-          <%= link_to  "Add Piece", new_exhibition_art_piece_path(@showroom.exhibition) , :class => "dropdown-item" %>
-          <%= link_to  "Edit Showroom", edit_showroom_path(@showroom) , :class => "dropdown-item" %>
-          <%end%>
+          <%= link_to  "Back", showroom_path(@showroom) , :class => "dropdown-item" %>
           <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           <% else %>
           <%= link_to "Login", new_user_session_path, class: "dropdown-item" %>
@@ -44,19 +41,17 @@
     </ul>
   </div>
 </div>
+
 <div class="container">
   <div class="card-title text-center p-2 mb-1" style="margin-top:20px">
-    <h1> <%= @showroom.name %></h1>
+    <h4> Edit Showroom </h4>
   </div>
-</div>
-<div class="container" style="margin-top:20px">
-  <div class="card">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+  <div class="container" style="margin-top:20px;">
+    <%= simple_form_for @showroom do |f| %>
+    <%= f.input :name %>
+    <%= f.input :photo, as: :file %>
+    <%= f.submit 'Add', class: 'btn btn-light' %>
+    <%= link_to  "Back", showroom_path(@showroom), class: 'btn btn-light'%>
+    <%end%>
   </div>
 </div>
