--- a/app/views/exhibitions/edit.html.erb
+++ b/app/views/exhibitions/edit.html.erb
@@ -50,7 +50,7 @@
     <%= f.input :name %>
     <%= f.input :artist %>
     <%= f.input :video %>
-    <%= f.input :photo, as: :file %>
+    <%= f.input :photo, as: :file, class:'btn btn-light' %>
     <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
     <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
     <%= f.submit 'Edit', class: 'btn btn-light' %>
