--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -73,12 +73,12 @@
         </div>
         <div class="col-12 col-sm-12 col-md-7 col-lg-7">
           <div class="container" style="margin-top: 10px; margin-bottom: 10px;">
-            <div id="myCarousel" class="carousel slide" data-interval="false">
+            <div id="myCarousel" class="w-100 carousel slide" data-interval="false">
               <div class="carousel-inner center">
                 <% if @exhibition.art_pieces.count.eql?(0) %>
                 <div class="carousel-item active ">
                   <div class="text-center">
-                    <%=link_to( cl_image_tag(@exhibition.photo.key, class: "d-block  mx-auto", style: "left: auto;right: auto; height:400px; max-width:400px" ), "#") %>
+                    <%=link_to( cl_image_tag(@exhibition.photo.key, class: "d-block  mx-auto", style: "height:400px;" ), "#") %>
                   </div>
                 </div>
                 <%else%>
@@ -89,7 +89,7 @@
                   <div class="carousel-item ">
                     <%end%>
                     <div class="text-center">
-                      <%=link_to( cl_image_tag(art_piece.photo.key, class: "d-block  mx-auto", style: "left: auto;right: auto; height:400px; max-width:400px" ), art_piece_path(art_piece) ) %>
+                      <%=link_to( cl_image_tag(art_piece.photo.key, class: "d-block  mx-auto", style: "height:400px;" ), art_piece_path(art_piece) ) %>
                       <div class="carousel-caption-exhibition"> <span class="exhibition_title">
                           <%= art_piece.name %></span><br>
                         <span class="date">
