--- a/app/views/galeries/edit.html.erb
+++ b/app/views/galeries/edit.html.erb
@@ -49,7 +49,7 @@
     <%= simple_form_for @galery do |f| %>
     <%= f.input :name %>
     <%= f.input :location %>
-    <%= f.input :photo, as: :file %>
+    <%= f.input :photo, as: :file,class:'btn btn-light' %>
     <%= f.submit 'Add', class: 'btn btn-light'%>
     <%= link_to "Back", galery_path(@galery), class: 'btn btn-light'%>
     <%end%>
