--- a/app/views/galeries/index.html.erb
+++ b/app/views/galeries/index.html.erb
@@ -46,13 +46,13 @@
     <h4> GALERIES </h4>
   </div>
   <div class="container" style="margin-top:20px;">
-    <div id="carouselExampleIndicators" class="h-100 carousel slide" data-ride="carousel">
+    <div id="carouselExampleIndicators" class="w-100 h-100 carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <% @galeries.each do |galery| %>
         <% if galery.eql?(@galeries.first) %>
-        <li data-target="#carouselExampleIndicators" data-slide-to=<%="#{galery.id}"%> class="active"></li>
+        <li data-target="#carouselExampleIndicators w-100" data-slide-to=<%="#{galery.id}"%> class="active"></li>
         <% else %>
-        <li data-target="#carouselExampleIndicators" data-slide-to=<%="#{galery.id}"%>></li>
+        <li data-target="#carouselExampleIndicators w-100" data-slide-to=<%="#{galery.id}"%>></li>
         <%end%>
         <%end%>
       </ol>
@@ -63,7 +63,7 @@
           <%else%>
           <div class="carousel-item">
             <%end%>
-            <%= cl_image_tag galery.photo.key, class: "d-block w-100", alt: galery.name %>
+            <%= cl_image_tag galery.photo.key, class: "d-block mx-auto",width:"800", height:"400", alt: galery.name %>
             <div class="carousel-caption" style="color: black;">
               <%= link_to  "#{galery.name}", galery_path(galery), class: "btn btn-outline-dark text-white" %>
               <p><%= galery.location%></p>
