--- a/app/views/exhibitions/art_pieces/index.html.erb
+++ b/app/views/exhibitions/art_pieces/index.html.erb
@@ -55,7 +55,21 @@
         <div class="image-holder exposition">
           <%= cl_image_tag art_piece.photo.key %>
           <div class="opener">
-            <%= link_to "view", art_piece_path(art_piece) , class:"nounderline text-dark"%>
+            <a class="nounderline text-dark" data-toggle="modal" data-target="#exampleModal">
+              view
+            </a>
+          </div>
+          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-body">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                  <%= cl_image_tag art_piece.photo.key%>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="info">
