--- a/app/views/exhibitions/showrooms/new.html.erb
+++ b/app/views/exhibitions/showrooms/new.html.erb
@@ -49,7 +49,7 @@
   <div class="container" style="margin-top:20px;">
     <%= simple_form_for(@showroom, url: exhibition_showrooms_path , method: :post) do |f| %>
     <%= f.input :name %>
-    <%= f.input :photo, as: :file , class:'btn btn-light'%>
+    <%= f.input :background, collection: Showroom::BACKGROUNDS %>
     <%= f.submit 'Add', class: 'btn btn-light' %>
     <%= link_to  "Back", exhibition_path(@exhibition), class: 'btn btn-light'%>
     <%end%>
