--- a/app/views/showrooms/edit.html.erb
+++ b/app/views/showrooms/edit.html.erb
@@ -49,7 +49,7 @@
   <div class="container" style="margin-top:20px;">
     <%= simple_form_for @showroom do |f| %>
     <%= f.input :name %>
-    <%= f.input :photo, as: :file %>
+    <%= f.input :background, collection: Showroom::BACKGROUNDS %>
     <%= f.submit 'Add', class: 'btn btn-light' %>
     <%= link_to  "Back", showroom_path(@showroom), class: 'btn btn-light'%>
     <%end%>
