--- a/app/views/showrooms/show.html.erb
+++ b/app/views/showrooms/show.html.erb
@@ -34,7 +34,7 @@
           <% if current_user.eql?(@showroom.exhibition.user) %>
           <%= link_to  "Add Piece", new_exhibition_art_piece_path(@showroom.exhibition) , :class => "dropdown-item" %>
           <%= link_to  "Edit Showroom", edit_showroom_path(@showroom) , :class => "dropdown-item" %>
-          <%= link_to  "Delete Showroom", showroom_path(@showroom), method: :delete, data: {confirm: "Are you sure?"} %>
+          <%= link_to  "Delete Showroom", showroom_path(@showroom),:class => "dropdown-item", method: :delete, data: {confirm: "Are you sure?"} %>
           <%end%>
           <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           <% else %>
@@ -50,6 +50,7 @@
     <h1> <%= @showroom.name %></h1>
   </div>
 </div>
+<% if current_user.eql?(@showroom.exhibition.user) %>
 <div class=container style="margin-top:20px">
   <div class="row">
     <div class="col-4">
@@ -90,6 +91,7 @@
     </div>
   </div>
 </div>
+<%end%>
 <div class="container" style="margin-top:20px">
   <div class="card">
     <%= image_tag @showroom.background %>
