aligned text, centered title

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,31 +1,22 @@
 <!-- app/views/pages/about.html.erb -->
 
-<div class="mx-auto" style="width: 200px;">
+<div class="mx-auto" style="width: 200px; margin-top: 80px; margin-bottom: 50px">
   <h1>About us </h1> 
+
 </div>
 
 <div class="container">
-
-  <p>
-  Hello there! We are looking for artists that never gave up on their dream to make the world a beautiful place! This website addresses the needs of the artists, at the beginning of their career or already on their path!  We are a group of <em>art enthousiast gallerists</em> ready to take the world up a storm and revive art especially in the difficult times we are living. If you struggle to showcase your beautiful art because of prohibitive costs, don't dispair, we are what you are looking for.
-  </p>
-  
-  <p>
-  Take your time and visit our website, choose your favorite gallery, create your beautiful exhibition project in 1-2-3 and we take care of bring an entire 
-  community of art enthousiasts right at your doorstep.
-  </p>
-  
-  <p>
-  Are you an art enthousiast and need more information about the beautiful art showcased here? Then contact us and we will put you in contact with the artist. 
-  </p> 
-
+    <div class="d-flex.justify-content-around" style="text-align: justify">
+        <p>
+        Hello there! We are looking for artists that never gave up on their dream to make the world a beautiful place! This website addresses the needs of the artists, at the beginning of their career or already on their path!  We are a group of <em>art enthousiast gallerists</em> ready to take the world up a storm and revive art especially in the difficult times we are living. If you struggle to showcase your beautiful art because of prohibitive costs, don't dispair, we are what you are looking for.
+        Take your time and visit our website, choose your favorite gallery, create your beautiful exhibition project in 1-2-3 and we take care of bring an entire 
+        community of art enthousiasts right at your doorstep.
+        </p> 
+        <p>
+        Are you an art enthousiast and need more information about the beautiful art showcased here? Then contact us and we will put you in contact with the artist. 
+        </p>
+    </div>
 </div>
-
-
-
-  
-  
-  </p>
 
 
 
