--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -1,6 +1,17 @@
+
 .px-2 {
     padding-left: ($spacer * .5) !important;
     padding-right: ($spacer * .5) !important;
   }
 
-  
+.about_description {
+  font-family: 'CircularCHNStd';
+  font-size: 12px;
+  font-style: normal;
+  font-weight: normal;
+  color: #000000;
+  padding: 2px;
+  letter-spacing: 1.5px;
+  text-transform: lowercase;
+  line-height: 25px;
+  }
