--- a/app/views/galeries/index.html.erb
+++ b/app/views/galeries/index.html.erb
@@ -43,7 +43,7 @@
 </div>
 <div class="container">
   <div class="card-title text-center p-2 mb-1" style="margin-top:20px">
-    <h4> GALERIES </h4>
+    <h4> GALLERIES </h4>
   </div>
   <div class="container" style="margin-top:20px;">
     <div id="carouselExampleIndicators" class="w-100 h-100 carousel slide" data-ride="carousel">
