--- a/app/views/galeries/new.html.erb
+++ b/app/views/galeries/new.html.erb
@@ -44,7 +44,7 @@
 
 <div class="container">
   <div class="card-title text-center p-2 mb-1" style="margin-top:20px">
-    <h4> New Galery </h4>
+    <h4> New Gallery </h4>
   </div>
   <div class="container" style="margin-top:20px;">
     <%= simple_form_for @galery do |f| %>
