--- a/app/views/exhibitions/video.html.erb
+++ b/app/views/exhibitions/video.html.erb
@@ -52,7 +52,7 @@
 
 <div class="container">
   <div class="card-title text-center p-2 mb-1" style="margin-top:20px">
-    <h4> Galery <%= @exhibition.galery.name %></h4>
+    <h4> Gallery <%= @exhibition.galery.name %></h4>
   </div>
   <div class="card" style="margin-top:20px;">
     <div class="container">
