--- a/app/views/galeries/edit.html.erb
+++ b/app/views/galeries/edit.html.erb
@@ -43,7 +43,7 @@
 </div>
 <div class="container">
   <div class="card-title text-center p-2 mb-1" style="margin-top:20px">
-    <h4> Edit Galery </h4>
+    <h4> Edit Gallery </h4>
   </div>
   <div class="container" style="margin-top:20px;">
     <%= simple_form_for @galery do |f| %>
