--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,6 @@
-<h2>Sign up</h2>
+<div class="card-title text-center p-2 mb-1" style="margin-top:20px">
+  <h2>Sign up</h2>
+</div>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 <%= f.error_notification %>
