--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,17 +1,21 @@
-<h2>Forgot your password?</h2>
+<div class="container">
+  <div class="card-title text-center p-2 mb-1" style="margin-top:20px">
+    <h2>Forgot your password?</h2>
+  </div>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-<%= f.error_notification %>
+  <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+  <%= f.error_notification %>
 
-<div class="form-inputs">
-  <%= f.input :email,
+  <div class="form-inputs" style="margin-top:20px">
+    <%= f.input :email,
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "email" } %>
-</div>
+  </div>
 
-<div class="form-actions">
-  <%= f.button :submit, "Send me reset password instructions" %>
-  <%= render "devise/shared/links" %>
+  <div class="form-actions">
+    <%= f.button :submit, "Send me reset password instructions" %>
+    <%= render "devise/shared/links" %>
+  </div>
+  <% end %>
 </div>
-<% end %>
