--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,26 +1,28 @@
-<div class="card-title text-center p-2 mb-1" style="margin-top:20px">
-  <h2>Sign up</h2>
-</div>
+<div class="container">
+  <div class="card-title text-center p-2 mb-1" style="margin-top:20px">
+    <h2>Sign up</h2>
+  </div>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-<%= f.error_notification %>
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= f.error_notification %>
 
-<div class="form-inputs">
-  <%= f.input :email,
+  <div class="form-inputs" style="margin-top:20px">
+    <%= f.input :email,
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "email" }%>
-  <%= f.input :password,
+    <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
                 input_html: { autocomplete: "new-password" } %>
-  <%= f.input :password_confirmation,
+    <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
-</div>
+  </div>
 
-<div class="form-actions">
-  <%= f.button :submit, "Sign up" %>
-  <%= render "devise/shared/links" %>
+  <div class="form-actions">
+    <%= f.button :submit, "Sign up" %>
+    <%= render "devise/shared/links" %>
+  </div>
+  <% end %>
 </div>
-<% end %>
