--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,6 +1,9 @@
-<h2>Resend unlock instructions</h2>
+<div class="container">
+  <div class="card-title text-center p-2 mb-1" style="margin-top:20px">
+    <h2>Resend unlock instructions</h2>
+  </div>
 
-<%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+  <%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
   <%= f.full_error :unlock_token %>
 
@@ -13,7 +16,9 @@
 
   <div class="form-actions">
     <%= f.button :submit, "Resend unlock instructions" %>
+    <%= render "devise/shared/links" %>
   </div>
-<% end %>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+
+</div>
