added button to about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -19,3 +19,8 @@
     </div>
 </div>
 
+<div class="mx-auto" style="width: 200px; margin-top: 50px; margin-bottom: 50px">
+<button class="button" id="button1"> Home</button>
+
+<div class="mx-auto" style="width: 200px; margin-left: 100px; margin-top: 80px; margin-bottom: 50px">
+
